Import files TS

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,5 +19,10 @@
         "@typescript-eslint"
     ],
     "rules": {
+    },
+    "settings": {
+      "import/resolver": {
+        "typescript": {}
+      }
     }
 }
